--- a/herbal.html
+++ b/herbal.html
@@ -168,22 +168,72 @@
       color: #5c2f2f;
     }
 
+    .newspaper-mode {
+      background: #ffffff !important;
+      color: #111 !important;
+      font-family: 'Georgia', serif;
+      filter: grayscale(100%);
+    }
+
+    .newspaper-mode .site-title,
+    .newspaper-mode h1,
+    .newspaper-mode h2 {
+      color: #000 !important;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+
+    .newspaper-mode nav {
+      background-color: #f1f1f1;
+      border: 1px solid #000;
+      box-shadow: none;
+    }
+
+    .newspaper-mode nav a {
+      color: #111;
+      font-family: 'Georgia', serif;
+    }
+
+    .newspaper-mode nav a:hover {
+      background: #ddd;
+      color: #000;
+      box-shadow: none;
+    }
+
+    .newspaper-mode main {
+      background: #fefefe;
+      color: #111;
+      border: 1px solid #000;
+      box-shadow: none;
+      font-family: 'Georgia', serif;
+    }
+
+    .newspaper-mode .highlight-box {
+      background: #f9f9f9;
+      border: 1px solid #000;
+    }
+
+    .newspaper-mode footer {
+      background: #f2f2f2;
+      color: #000;
+      border-top: 1px solid #000;
+    }
+
+    .newspaper-mode img {
+      filter: grayscale(100%);
+      border: 1px solid #111;
+    }
+
     .mode-switch {
       position: fixed;
       top: 20px;
       right: 20px;
-      padding: 0.5rem 1rem;
-      background-color: #e0b9a7;
-      border: none;
-      border-radius: 10px;
+      padding: 0.4rem;
       font-weight: bold;
-      cursor: pointer;
+      border-radius: 6px;
       z-index: 10;
     }
 
-    .mode-switch:hover {
-      background-color: #fddc8a;
-    }
   </style>
 </head>
 <body>
@@ -195,6 +245,12 @@
 
   <!-- Header & Nav -->
   <div class="site-title">ChatGPT-Crafted Wisdom</div>
+
+  <select class="mode-switch" onchange="switchMode(this.value)">
+    <option value="normal">Normal Mode</option>
+    <option value="inspiration">Inspiration Mode</option>
+    <option value="newspaper">Newspaper Mode</option>
+  </select>
 
   <nav>
     <a href="index.html">Home</a>
@@ -285,24 +341,22 @@
 
   </main>
 
-  <button class="mode-switch" onclick="toggleMode()">Switch to Inspiration Mode</button>
+  <script>
+    // Function to switch between modes
+    function switchMode(mode) {
+      document.body.classList.remove('inspiration-mode', 'newspaper-mode');
+
+      if (mode === 'inspiration') {
+        document.body.classList.add('inspiration-mode');
+      } else if (mode === 'newspaper') {
+        document.body.classList.add('newspaper-mode');
+      }
+    }
+  </script>
 
   <footer>
     <p>© 2025 ChatGPT-Crafted Wisdom | Designed with love, herbs, and AI magic</p>
   </footer>
 
-  <script>
-    // Function to toggle inspiration mode
-    function toggleMode() {
-      document.body.classList.toggle('inspiration-mode');
-      
-      const button = document.querySelector('.mode-switch');
-      if (document.body.classList.contains('inspiration-mode')) {
-        button.textContent = 'Switch to Normal Mode';
-      } else {
-        button.textContent = 'Switch to Inspiration Mode';
-      }
-    }
-  </script>
 </body>
 </html>
