--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Dark mode */
+    /* ChatGPT Mode */
     body.chatgpt-active {
       background-color: #121212;
       color: #e5e5e5;
@@ -122,7 +122,6 @@
       color: #e5e5e5;
     }
 
-    /* Buttons */
     .contact-button {
       display: inline-block;
       background-color: #00e5e5;
@@ -133,8 +132,8 @@
       text-decoration: none;
       box-shadow: 0 0 10px #00e5e5;
       transition: all 0.3s ease;
+      margin: 0.5rem;
       animation: float 3s ease-in-out infinite;
-      margin: 1rem;
     }
     .contact-button:hover {
       background-color: #00cccc;
@@ -186,7 +185,9 @@
 
     <div style="text-align: center; margin-top: 2rem;">
       <p><strong>Find me online:</strong></p>
-      <img src="1000007504.jpg" alt="TikTok QR Code for @musicaslifestyle" style="max-width: 200px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+      <a href="https://www.tiktok.com/@musicaslifestyle?_t=ZN-8w8g9cgFxQs&_r=1" target="_blank">
+        <img src="1000007504.jpg" alt="TikTok QR Code for @musicaslifestyle" style="max-width: 200px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+      </a>
       <br><br>
       <a href="https://www.linkedin.com/in/tmb" target="_blank" class="contact-button">Connect on LinkedIn</a>
       <a href="https://chatgpt.com/" target="_blank" class="contact-button">Visit ChatGPT</a>
@@ -195,7 +196,6 @@
   <footer>
     &copy; 2025 ChatGPT-Crafted Wisdom. All rights reserved.
   </footer>
-
   <script>
     function toggleChatGPTMode() {
       document.body.classList.toggle('chatgpt-active');
