--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
 </head>
 <body>
   <button class="toggle-icon" onclick="toggleChatGPTMode()">🌓</button>
-  <div class="site-title">ChatGPT-Crafted Wisdom</div>
+  <div class="site-title">Crafted Wisdom</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
