--- a/herbal.html
+++ b/herbal.html
@@ -262,7 +262,7 @@
   </nav>
 
   <main>
-    <img src="logo.png" alt="ChatGPT-Crafted Wisdom Logo" class="logo">
+    <img src="logo.png" alt="Crafted Wisdom Logo" class="logo">
 
     <header>
       <h1>Anti-Cancer Support & Prevention Tea Blend</h1>
