--- a/poetry.html
+++ b/poetry.html
@@ -160,7 +160,7 @@
   </style>
 </head>
 <body>
-  <div class="site-title">ChatGPT-Crafted Wisdom</div>
+  <div class="site-title">Crafted Wisdom</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="wisdom.html">Wisdom</a>
