--- a/herbal.html
+++ b/herbal.html
@@ -244,7 +244,7 @@
   <img src="vine-right-highres.png" alt="Right Vine" class="vine-img vine-right" />
 
   <!-- Header & Nav -->
-  <div class="site-title">ChatGPT-Crafted Wisdom</div>
+  <div class="site-title">Crafted Wisdom</div>
 
   <select class="mode-switch" onchange="switchMode(this.value)">
     <option value="normal">Normal Mode</option>
